responsive header in progress

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../src/scss/main.scss">
+  <script defer src="../src/main.js"></script>
   <title>Document</title>
 </head>
 <body>
-  <h1 class="title">test portfolio initial</h1>
+  <img class="close" src="../src/asset/img/close (1).svg" alt="button close">
+  <header class="header"  id="header">
+    <nav class="header__container">
+      <ul class="header__nav">
+        <li class="header__links">Acceuil</li>
+        <li class="header__links">Acceuil</li>
+        <li class="header__links">Acceuil</li>
+      </ul>
+    </nav>
+  </header>
+  <h1>Hello world</h1>
 </body>
 </html>
