--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
       </ul>
     </nav>
   </header>
-  <h1>Hello world</h1>
+  <section>
+    <h1>Hello world</h1>
+  </section>
 </body>
 </html>
