finish the structure of my burger menu

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
   <title>Document</title>
 </head>
 <body>
-  <img class="close" src="../src/asset/img/close (1).svg" alt="button close">
+  <div class="menuBurger">
+    <span class="menuBurger__bar"></span>
+    <span class="menuBurger__bar"></span>
+    <span class="menuBurger__bar"></span>
+  </div>
   <header class="header"  id="header">
     <nav class="header__container">
       <ul class="header__nav">
