start building project section

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,16 @@
       </ul>
     </nav>
   </header>
-  <section>
-    <h1>Hello world</h1>
+  <section class="project">
+    <a href="https://cineo.netlify.app/">
+      <div class="project__card">CINEO</div>
+    </a>
+    <a href="https://cineo.netlify.app/">
+      <div class="project__card">CINEO</div>
+    </a>
+    <a href="https://cineo.netlify.app/">
+      <div class="project__card">CINEO</div>
+    </a>
   </section>
 </body>
 </html>
