--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,14 @@
     </nav>
   </header>
   <section class="project">
-    <a href="https://cineo.netlify.app/">
-      <div class="project__card">CINEO</div>
+    <a href="https://golden-record.netlify.app/#/">
+      <div class="project__card">Golden record</div>
     </a>
     <a href="https://cineo.netlify.app/">
-      <div class="project__card">CINEO</div>
+      <div class="project__card">Cineo</div>
     </a>
-    <a href="https://cineo.netlify.app/">
-      <div class="project__card">CINEO</div>
+    <a href="https://perfected.netlify.com/">
+      <div class="project__card">Perfected</div>
     </a>
   </section>
 </body>
