add features on project card

--- a/src/index.html
+++ b/src/index.html
@@ -22,15 +22,47 @@
       </ul>
     </nav>
   </header>
+  <h1 class="mainTitle">Project</h1>
   <section class="project">
     <a href="https://golden-record.netlify.app/#/">
-      <div class="project__card">Golden record</div>
+      <div class="project__card">
+        <h2 class="project__title">golden-record</h2>
+        <div class="project__upper">
+          <img class="project__upper--img" src="../src/asset/img/html-5.svg" alt="css">
+          <img class="project__upper--img" src="../src/asset/img/sass.png" alt="css">
+          <img class="project__upper--img" src="../src/asset/img/vuejs.png" alt="css">
+        </div>
+      </div>
     </a>
     <a href="https://cineo.netlify.app/">
-      <div class="project__card">Cineo</div>
+      <div class="project__card">
+        <h2 class="project__title">Cineo</h2>
+        <div class="project__upper">
+          <img class="project__upper--img" src="../src/asset/img/html-5.svg" alt="css">
+          <img class="project__upper--img" src="../src/asset/img/sass.png" alt="css">
+          <img class="project__upper--img" src="../src/asset/img/React.png" alt="css">
+        </div>
+      </div>
     </a>
     <a href="https://perfected.netlify.com/">
-      <div class="project__card">Perfected</div>
+      <div class="project__card">
+        <h2 class="project__title">Perfected</h2>
+        <div class="project__upper">
+          <img class="project__upper--img" src="../src/asset/img/html-5.svg" alt="css">
+          <img class="project__upper--img" src="../src/asset/img/sass.png" alt="css">
+          <img class="project__upper--img" src="../src/asset/img/js.png" alt="css">
+        </div>
+      </div>
+    </a>
+    <a href="https://arch-e-mede.netlify.com/">
+      <div class="project__card">
+        <h2 class="project__title">arch-e-mede</h2>
+        <div class="project__upper">
+          <img class="project__upper--img" src="../src/asset/img/html-5.svg" alt="css">
+          <img class="project__upper--img" src="../src/asset/img/css.svg" alt="css">
+          <img class="project__upper--img" src="../src/asset/img/js.png" alt="css">
+        </div>
+      </div>
     </a>
   </section>
 </body>
